# Deferred-Rendering

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLEW.cmake  FindGLM.cmake  FindSDL2.cmake
include/: model.h  util.h
makefiles/linux-gcc/: Makefile
makefiles/windows-mingw/: Makefile
res/: fdbg.glsl  fforward.glsl  fforward_lum.glsl  fparabola.glsl  fsecondpass.glsl  fshader.glsl  fshadow.glsl  glayered_test.glsl  gshadow_instanced.glsl  vdbg.glsl  vforward.glsl  vinstanced.glsl  vlayered_instanced.glsl  vlayered_test.glsl  vparabola.glsl  vsecondpass.glsl  vshader.glsl  vshadow.glsl  vshadow_instanced.glsl  vshadow_point_instanced.glsl
src/: CMakeLists.txt  main.cpp  model.cpp  util.cpp  util.h
